fix: Fix income/expense overflow issues on mobile screen size

--- a/style.css
+++ b/style.css
@@ -156,11 +156,12 @@ h6 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: clamp(10rem, 100%, 20rem);
 	height: clamp(6rem, 8rem, 12rem);
 	padding: clamp(0.5rem, 1rem, 1.5rem);
 	border-radius: 0.3rem;
 	background: var(--light-1-t-2);
-	font-size: 2.5rem;
+	font-size: clamp(1.5rem, 2.5rem, 4rem);
 }
 
 .positive-cash {
@@ -358,4 +359,14 @@ h6 {
 /* Toggle classes */
 .visible {
 	opacity: 1;
+}
+
+@media (max-width: 420px) {
+	html {
+		font-size: 9px;
+	}
+
+	.total {
+		font-size: 2rem;
+	}
 }
